[package]
name = "luabundle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
argh = "0.1.10"
full_moon = { version = "0.18.1", features = ["lua54"]}
env_logger = "0.10.0"
log = "0.4.19"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"]}
toml = "0.7.6"
petgraph = "0.6.3"

[dev-dependencies]
tempfile = "3.8.0"